# mini-pascal500

./: Cargo.toml  README.md
src/: grammar.lalrpop  lexer.rs  main.rs  store.rs  utils.rs
src/ast/: mod.rs  program.rs  types.rs
src/ast/expression/: mod.rs  operators.rs  variables.rs
src/error/: io_error.rs  mod.rs  parse_error.rs  semantic_error.rs
