[package]
name = "mini-pascal500"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.6"
lazy_static = "1.4.0"
regex = "1.5.4"
logos = "0.12.0"
colored = "2"

[build-dependencies]
lalrpop = { version = "0.19.6", features = ["lexer"]}

